--- a/Desafios_QuarentenaDados_Alura.ipynb
+++ b/Desafios_QuarentenaDados_Alura.ipynb
@@ -12,7 +12,7 @@
         "UiqDv1mYSIub",
         "J6PuJmO9dPWA"
       ],
-      "authorship_tag": "ABX9TyMLzzIfdYkYWySQ0tDdu6bs",
+      "authorship_tag": "ABX9TyOTa11SmLxs9/f+JVYe+Qw7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "rKsrjNTmNF8_",
         "colab_type": "code",
-        "outputId": "4a017e40-b488-4685-f06b-46320ac29be6",
+        "outputId": "3b2364e8-471c-495c-9975-f3b643d9e373",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -61,7 +61,7 @@
         "filmes.columns = ['filmeId', 'titulo', 'generos']\n",
         "filmes.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +148,7 @@
       "metadata": {
         "id": "u9YmTvdUNLU6",
         "colab_type": "code",
-        "outputId": "25df467e-29ae-4426-dfde-0f6bc2db41c2",
+        "outputId": "9f5948f2-fb86-4097-de65-bd0288dac9e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -159,7 +159,7 @@
         "avaliacoes.columns = ['usuarioId', 'filmeId', 'nota', 'momento']\n",
         "avaliacoes.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "_e2gOnkJO7aR",
         "colab_type": "code",
-        "outputId": "299e2349-4d92-4a4c-dd72-058060664097",
+        "outputId": "6d135ebf-cdd0-425c-f05e-42c5392b7851",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -259,7 +259,7 @@
       "source": [
         "filmes"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -380,7 +380,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -402,7 +402,7 @@
       "metadata": {
         "id": "6Zxqf-awPlQK",
         "colab_type": "code",
-        "outputId": "2092af60-20cb-4467-bb61-0d712e7f217e",
+        "outputId": "497ece10-373c-4f6f-efb1-39d8c11a4fc1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -411,7 +411,7 @@
       "source": [
         "notas_medias_por_filme"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,7 +435,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 6
         }
       ]
     },
@@ -444,7 +444,7 @@
       "metadata": {
         "id": "AGACJBWpQIHK",
         "colab_type": "code",
-        "outputId": "4765d1e5-76de-49cc-ae04-97a9b45c94da",
+        "outputId": "3ed188b7-cb7b-4da5-d9f1-8776616d0849",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -452,9 +452,9 @@
       },
       "source": [
         "filmes_com_medias = filmes.join(notas_medias_por_filme, on='filmeId')\n",
-        "filmes_com_medias"
+        "filmes_com_medias.rename({'nota':'nota_média'}, axis='columns')"
       ],
-      "execution_count": 91,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +481,7 @@
               "      <th>filmeId</th>\n",
               "      <th>titulo</th>\n",
               "      <th>generos</th>\n",
-              "      <th>nota</th>\n",
+              "      <th>nota_média</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -568,18 +568,18 @@
               "</div>"
             ],
             "text/plain": [
-              "      filmeId  ...      nota\n",
-              "0           1  ...  3.920930\n",
-              "1           2  ...  3.431818\n",
-              "2           3  ...  3.259615\n",
-              "3           4  ...  2.357143\n",
-              "4           5  ...  3.071429\n",
-              "...       ...  ...       ...\n",
-              "9737   193581  ...  4.000000\n",
-              "9738   193583  ...  3.500000\n",
-              "9739   193585  ...  3.500000\n",
-              "9740   193587  ...  3.500000\n",
-              "9741   193609  ...  4.000000\n",
+              "      filmeId  ... nota_média\n",
+              "0           1  ...   3.920930\n",
+              "1           2  ...   3.431818\n",
+              "2           3  ...   3.259615\n",
+              "3           4  ...   2.357143\n",
+              "4           5  ...   3.071429\n",
+              "...       ...  ...        ...\n",
+              "9737   193581  ...   4.000000\n",
+              "9738   193583  ...   3.500000\n",
+              "9739   193585  ...   3.500000\n",
+              "9740   193587  ...   3.500000\n",
+              "9741   193609  ...   4.000000\n",
               "\n",
               "[9742 rows x 4 columns]"
             ]
@@ -587,7 +587,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 91
+          "execution_count": 26
         }
       ]
     },
@@ -634,16 +634,16 @@
       "metadata": {
         "id": "hnk-2TdZvhIa",
         "colab_type": "code",
+        "outputId": "593e9aaf-4a3a-4e93-fdfe-86c8d045dc95",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 607
-        },
-        "outputId": "d333f878-5853-46c0-85ba-53ab22c36044"
+          "height": 0
+        }
       },
       "source": [
         "filmes_sem_nota.sort_values(\"titulo\", ascending=True)"
       ],
-      "execution_count": 48,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -831,7 +831,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 10
         }
       ]
     },
@@ -840,16 +840,16 @@
       "metadata": {
         "id": "vENOEZCpy0PS",
         "colab_type": "code",
+        "outputId": "a8473208-3085-4b64-b8d3-140e1baddd0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "7e77c583-08d7-471e-8c0c-11b1b2b54e4d"
+          "height": 0
+        }
       },
       "source": [
         "filmes_sem_nota['filmeId'].count()"
       ],
-      "execution_count": 53,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +861,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 11
         }
       ]
     },
@@ -881,16 +881,16 @@
       "metadata": {
         "id": "k3tQOYOR3W9e",
         "colab_type": "code",
+        "outputId": "c2e102ea-1db5-4439-8297-d96ad741920b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        },
-        "outputId": "bf55b3ad-0532-440b-9ea1-2589400eb7b6"
+        }
       },
       "source": [
         "filmes_com_medias.rename({'nota':'nota_média'}, axis='columns')"
       ],
-      "execution_count": 101,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -918,7 +918,6 @@
               "      <th>titulo</th>\n",
               "      <th>generos</th>\n",
               "      <th>nota_média</th>\n",
-              "      <th>qtd_votos</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -928,7 +927,6 @@
               "      <td>Toy Story (1995)</td>\n",
               "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
               "      <td>3.920930</td>\n",
-              "      <td>215.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -936,7 +934,6 @@
               "      <td>Jumanji (1995)</td>\n",
               "      <td>Adventure|Children|Fantasy</td>\n",
               "      <td>3.431818</td>\n",
-              "      <td>110.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -944,7 +941,6 @@
               "      <td>Grumpier Old Men (1995)</td>\n",
               "      <td>Comedy|Romance</td>\n",
               "      <td>3.259615</td>\n",
-              "      <td>52.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -952,7 +948,6 @@
               "      <td>Waiting to Exhale (1995)</td>\n",
               "      <td>Comedy|Drama|Romance</td>\n",
               "      <td>2.357143</td>\n",
-              "      <td>7.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -960,11 +955,9 @@
               "      <td>Father of the Bride Part II (1995)</td>\n",
               "      <td>Comedy</td>\n",
               "      <td>3.071429</td>\n",
-              "      <td>49.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
-              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -976,7 +969,6 @@
               "      <td>Black Butler: Book of the Atlantic (2017)</td>\n",
               "      <td>Action|Animation|Comedy|Fantasy</td>\n",
               "      <td>4.000000</td>\n",
-              "      <td>1.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9738</th>\n",
@@ -984,7 +976,6 @@
               "      <td>No Game No Life: Zero (2017)</td>\n",
               "      <td>Animation|Comedy|Fantasy</td>\n",
               "      <td>3.500000</td>\n",
-              "      <td>1.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9739</th>\n",
@@ -992,7 +983,6 @@
               "      <td>Flint (2017)</td>\n",
               "      <td>Drama</td>\n",
               "      <td>3.500000</td>\n",
-              "      <td>1.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9740</th>\n",
@@ -1000,7 +990,6 @@
               "      <td>Bungo Stray Dogs: Dead Apple (2018)</td>\n",
               "      <td>Action|Animation</td>\n",
               "      <td>3.500000</td>\n",
-              "      <td>1.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9741</th>\n",
@@ -1008,34 +997,33 @@
               "      <td>Andrew Dice Clay: Dice Rules (1991)</td>\n",
               "      <td>Comedy</td>\n",
               "      <td>4.000000</td>\n",
-              "      <td>1.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>9742 rows × 5 columns</p>\n",
+              "<p>9742 rows × 4 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "      filmeId                                     titulo  ... nota_média  qtd_votos\n",
-              "0           1                           Toy Story (1995)  ...   3.920930      215.0\n",
-              "1           2                             Jumanji (1995)  ...   3.431818      110.0\n",
-              "2           3                    Grumpier Old Men (1995)  ...   3.259615       52.0\n",
-              "3           4                   Waiting to Exhale (1995)  ...   2.357143        7.0\n",
-              "4           5         Father of the Bride Part II (1995)  ...   3.071429       49.0\n",
-              "...       ...                                        ...  ...        ...        ...\n",
-              "9737   193581  Black Butler: Book of the Atlantic (2017)  ...   4.000000        1.0\n",
-              "9738   193583               No Game No Life: Zero (2017)  ...   3.500000        1.0\n",
-              "9739   193585                               Flint (2017)  ...   3.500000        1.0\n",
-              "9740   193587        Bungo Stray Dogs: Dead Apple (2018)  ...   3.500000        1.0\n",
-              "9741   193609        Andrew Dice Clay: Dice Rules (1991)  ...   4.000000        1.0\n",
+              "      filmeId  ... nota_média\n",
+              "0           1  ...   3.920930\n",
+              "1           2  ...   3.431818\n",
+              "2           3  ...   3.259615\n",
+              "3           4  ...   2.357143\n",
+              "4           5  ...   3.071429\n",
+              "...       ...  ...        ...\n",
+              "9737   193581  ...   4.000000\n",
+              "9738   193583  ...   3.500000\n",
+              "9739   193585  ...   3.500000\n",
+              "9740   193587  ...   3.500000\n",
+              "9741   193609  ...   4.000000\n",
               "\n",
-              "[9742 rows x 5 columns]"
+              "[9742 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 12
         }
       ]
     },
@@ -1094,16 +1082,16 @@
       "metadata": {
         "id": "fVqHwIWVBWD3",
         "colab_type": "code",
+        "outputId": "16cf6fc4-25b0-4f8f-f300-2207c0cedfa6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
-        },
-        "outputId": "dfcb147d-bfed-4275-a966-c09f34e97749"
+          "height": 0
+        }
       },
       "source": [
         "filmes_com_medias.sort_values('qtd_votos', ascending=False)"
       ],
-      "execution_count": 97,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1248,7 +1236,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 97
+          "execution_count": 16
         }
       ]
     },
@@ -1268,16 +1256,16 @@
       "metadata": {
         "id": "DVHhiqfEOgRg",
         "colab_type": "code",
+        "outputId": "faf960e7-1d06-47b7-9970-57fea8949f6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
-        },
-        "outputId": "7dbcf38a-3bad-4fd6-a2a8-b7e1974d4fc2"
+          "height": 0
+        }
       },
       "source": [
         "filmes_com_medias.round({'nota':2})"
       ],
-      "execution_count": 109,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1422,7 +1410,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 109
+          "execution_count": 17
         }
       ]
     },
@@ -1468,16 +1456,16 @@
       "metadata": {
         "id": "3eMwdA8GVgbm",
         "colab_type": "code",
+        "outputId": "f12b6be2-4a6e-4146-b597-4728f1d74b8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        },
-        "outputId": "a6debccb-ef50-421b-a203-ca3df8d12ec1"
+        }
       },
       "source": [
         "filme_generos"
       ],
-      "execution_count": 133,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1802,7 +1790,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 133
+          "execution_count": 19
         }
       ]
     },
@@ -1824,16 +1812,16 @@
       "metadata": {
         "id": "jQpiQvKAhl2j",
         "colab_type": "code",
+        "outputId": "78ee10ae-7033-4730-ba88-1c64b49a9c35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "c4e51df6-5a31-4588-95b0-e12c07df87d5"
+        }
       },
       "source": [
         "filmes_coluna"
       ],
-      "execution_count": 138,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1849,7 +1837,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 138
+          "execution_count": 21
         }
       ]
     },
@@ -1892,16 +1880,16 @@
       "metadata": {
         "id": "P00o3I8niCOY",
         "colab_type": "code",
+        "outputId": "eb1452b4-2583-4773-f7e8-4e3e916ab9fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        },
-        "outputId": "021045a4-4e81-4983-81e8-a4ae65c1570c"
+        }
       },
       "source": [
         "filme_generos"
       ],
-      "execution_count": 144,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1933,7 +1921,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 144
+          "execution_count": 23
         }
       ]
     },
@@ -1966,28 +1954,28 @@
       "metadata": {
         "id": "RdQEYg6cmYq2",
         "colab_type": "code",
+        "outputId": "1c4f5690-b790-4293-b6a0-81c0da1e4eb2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 360
-        },
-        "outputId": "1aba2942-5540-4148-d634-c94b3b0c62ee"
+        }
       },
       "source": [
         "filme_generos.plot(kind='bar')\n"
       ],
-      "execution_count": 173,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f6dcbe79828>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f0d851ecbe0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 173
+          "execution_count": 25
         },
         {
           "output_type": "display_data",
