--- a/Desafios_QuarentenaDados_Alura.ipynb
+++ b/Desafios_QuarentenaDados_Alura.ipynb
@@ -12,7 +12,7 @@
         "UiqDv1mYSIub",
         "J6PuJmO9dPWA"
       ],
-      "authorship_tag": "ABX9TyOTa11SmLxs9/f+JVYe+Qw7",
+      "authorship_tag": "ABX9TyMcJoE5xbUTIfdE8Gtf8YNA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "rKsrjNTmNF8_",
         "colab_type": "code",
-        "outputId": "3b2364e8-471c-495c-9975-f3b643d9e373",
+        "outputId": "1faa3935-db97-4b4d-bee8-4090ccff5651",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -61,7 +61,7 @@
         "filmes.columns = ['filmeId', 'titulo', 'generos']\n",
         "filmes.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -139,7 +139,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 43
         }
       ]
     },
@@ -148,7 +148,7 @@
       "metadata": {
         "id": "u9YmTvdUNLU6",
         "colab_type": "code",
-        "outputId": "9f5948f2-fb86-4097-de65-bd0288dac9e8",
+        "outputId": "52271bdb-4b6d-4ded-b184-036d754fc867",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -159,7 +159,7 @@
         "avaliacoes.columns = ['usuarioId', 'filmeId', 'nota', 'momento']\n",
         "avaliacoes.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 44
         }
       ]
     },
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "_e2gOnkJO7aR",
         "colab_type": "code",
-        "outputId": "6d135ebf-cdd0-425c-f05e-42c5392b7851",
+        "outputId": "a68ffdc7-4447-4ec1-8c56-6c95eec2379c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -259,7 +259,7 @@
       "source": [
         "filmes"
       ],
-      "execution_count": 4,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -380,7 +380,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 45
         }
       ]
     },
@@ -402,7 +402,7 @@
       "metadata": {
         "id": "6Zxqf-awPlQK",
         "colab_type": "code",
-        "outputId": "497ece10-373c-4f6f-efb1-39d8c11a4fc1",
+        "outputId": "7d9162dd-fc0e-4495-ee69-23deb02f8e1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -411,7 +411,7 @@
       "source": [
         "notas_medias_por_filme"
       ],
-      "execution_count": 6,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,7 +435,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 47
         }
       ]
     },
@@ -444,7 +444,7 @@
       "metadata": {
         "id": "AGACJBWpQIHK",
         "colab_type": "code",
-        "outputId": "3ed188b7-cb7b-4da5-d9f1-8776616d0849",
+        "outputId": "4a14f322-6094-4d8b-f5d8-ffe94d817d02",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -454,7 +454,7 @@
         "filmes_com_medias = filmes.join(notas_medias_por_filme, on='filmeId')\n",
         "filmes_com_medias.rename({'nota':'nota_média'}, axis='columns')"
       ],
-      "execution_count": 26,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +587,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 48
         }
       ]
     },
@@ -634,16 +634,16 @@
       "metadata": {
         "id": "hnk-2TdZvhIa",
         "colab_type": "code",
-        "outputId": "593e9aaf-4a3a-4e93-fdfe-86c8d045dc95",
+        "outputId": "410c43f2-265e-4d8f-88dd-08e723c68a67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
         }
       },
       "source": [
-        "filmes_sem_nota.sort_values(\"titulo\", ascending=True)"
+        "filmes_sem_nota.sort_values(\"titulo\", ascending=True).rename({'nota':'nota_média'}, axis='columns')"
       ],
-      "execution_count": 10,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -670,7 +670,7 @@
               "      <th>filmeId</th>\n",
               "      <th>titulo</th>\n",
               "      <th>generos</th>\n",
-              "      <th>nota</th>\n",
+              "      <th>nota_média</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -805,25 +805,25 @@
               "</div>"
             ],
             "text/plain": [
-              "      filmeId  ... nota\n",
-              "5957    34482  ...  NaN\n",
-              "5837    32371  ...  NaN\n",
-              "7565    85565  ...  NaN\n",
-              "4037     5721  ...  NaN\n",
-              "2587     3456  ...  NaN\n",
-              "2499     3338  ...  NaN\n",
-              "3118     4194  ...  NaN\n",
-              "5749    30892  ...  NaN\n",
-              "816      1076  ...  NaN\n",
-              "5452    26085  ...  NaN\n",
-              "2211     2939  ...  NaN\n",
-              "5020     7792  ...  NaN\n",
-              "4704     7020  ...  NaN\n",
-              "4506     6668  ...  NaN\n",
-              "5421    25855  ...  NaN\n",
-              "4598     6849  ...  NaN\n",
-              "5293     8765  ...  NaN\n",
-              "5824    32160  ...  NaN\n",
+              "      filmeId  ... nota_média\n",
+              "5957    34482  ...        NaN\n",
+              "5837    32371  ...        NaN\n",
+              "7565    85565  ...        NaN\n",
+              "4037     5721  ...        NaN\n",
+              "2587     3456  ...        NaN\n",
+              "2499     3338  ...        NaN\n",
+              "3118     4194  ...        NaN\n",
+              "5749    30892  ...        NaN\n",
+              "816      1076  ...        NaN\n",
+              "5452    26085  ...        NaN\n",
+              "2211     2939  ...        NaN\n",
+              "5020     7792  ...        NaN\n",
+              "4704     7020  ...        NaN\n",
+              "4506     6668  ...        NaN\n",
+              "5421    25855  ...        NaN\n",
+              "4598     6849  ...        NaN\n",
+              "5293     8765  ...        NaN\n",
+              "5824    32160  ...        NaN\n",
               "\n",
               "[18 rows x 4 columns]"
             ]
@@ -831,7 +831,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 51
         }
       ]
     },
@@ -840,7 +840,7 @@
       "metadata": {
         "id": "vENOEZCpy0PS",
         "colab_type": "code",
-        "outputId": "a8473208-3085-4b64-b8d3-140e1baddd0c",
+        "outputId": "cc1c570b-2a81-4984-f7f9-d15967c5d40b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -849,7 +849,7 @@
       "source": [
         "filmes_sem_nota['filmeId'].count()"
       ],
-      "execution_count": 11,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +861,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 52
         }
       ]
     },
@@ -881,16 +881,16 @@
       "metadata": {
         "id": "k3tQOYOR3W9e",
         "colab_type": "code",
-        "outputId": "c2e102ea-1db5-4439-8297-d96ad741920b",
+        "outputId": "57e6cb09-a5a0-4fbd-9ce9-157bc88d0ace",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 0
         }
       },
       "source": [
         "filmes_com_medias.rename({'nota':'nota_média'}, axis='columns')"
       ],
-      "execution_count": 12,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1023,7 +1023,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 53
         }
       ]
     },
@@ -1082,16 +1082,16 @@
       "metadata": {
         "id": "fVqHwIWVBWD3",
         "colab_type": "code",
-        "outputId": "16cf6fc4-25b0-4f8f-f300-2207c0cedfa6",
+        "outputId": "8ce268b8-8e38-4d84-9a73-ecc4e06de5e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 419
         }
       },
       "source": [
         "filmes_com_medias.sort_values('qtd_votos', ascending=False)"
       ],
-      "execution_count": 16,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1236,7 +1236,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 57
         }
       ]
     },
@@ -1256,16 +1256,16 @@
       "metadata": {
         "id": "DVHhiqfEOgRg",
         "colab_type": "code",
-        "outputId": "faf960e7-1d06-47b7-9970-57fea8949f6a",
+        "outputId": "3f570937-82ec-420f-b3fb-b982a2b868fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 419
         }
       },
       "source": [
-        "filmes_com_medias.round({'nota':2})"
+        "filmes_com_medias.rename({'nota':'nota_média'}, axis='columns').round({'nota_média':2})"
       ],
-      "execution_count": 17,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1292,7 +1292,7 @@
               "      <th>filmeId</th>\n",
               "      <th>titulo</th>\n",
               "      <th>generos</th>\n",
-              "      <th>nota</th>\n",
+              "      <th>nota_média</th>\n",
               "      <th>qtd_votos</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -1391,18 +1391,18 @@
               "</div>"
             ],
             "text/plain": [
-              "      filmeId                                     titulo  ...  nota  qtd_votos\n",
-              "0           1                           Toy Story (1995)  ...  3.92      215.0\n",
-              "1           2                             Jumanji (1995)  ...  3.43      110.0\n",
-              "2           3                    Grumpier Old Men (1995)  ...  3.26       52.0\n",
-              "3           4                   Waiting to Exhale (1995)  ...  2.36        7.0\n",
-              "4           5         Father of the Bride Part II (1995)  ...  3.07       49.0\n",
-              "...       ...                                        ...  ...   ...        ...\n",
-              "9737   193581  Black Butler: Book of the Atlantic (2017)  ...  4.00        1.0\n",
-              "9738   193583               No Game No Life: Zero (2017)  ...  3.50        1.0\n",
-              "9739   193585                               Flint (2017)  ...  3.50        1.0\n",
-              "9740   193587        Bungo Stray Dogs: Dead Apple (2018)  ...  3.50        1.0\n",
-              "9741   193609        Andrew Dice Clay: Dice Rules (1991)  ...  4.00        1.0\n",
+              "      filmeId                                     titulo  ... nota_média  qtd_votos\n",
+              "0           1                           Toy Story (1995)  ...       3.92      215.0\n",
+              "1           2                             Jumanji (1995)  ...       3.43      110.0\n",
+              "2           3                    Grumpier Old Men (1995)  ...       3.26       52.0\n",
+              "3           4                   Waiting to Exhale (1995)  ...       2.36        7.0\n",
+              "4           5         Father of the Bride Part II (1995)  ...       3.07       49.0\n",
+              "...       ...                                        ...  ...        ...        ...\n",
+              "9737   193581  Black Butler: Book of the Atlantic (2017)  ...       4.00        1.0\n",
+              "9738   193583               No Game No Life: Zero (2017)  ...       3.50        1.0\n",
+              "9739   193585                               Flint (2017)  ...       3.50        1.0\n",
+              "9740   193587        Bungo Stray Dogs: Dead Apple (2018)  ...       3.50        1.0\n",
+              "9741   193609        Andrew Dice Clay: Dice Rules (1991)  ...       4.00        1.0\n",
               "\n",
               "[9742 rows x 5 columns]"
             ]
@@ -1410,7 +1410,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 68
         }
       ]
     },
@@ -1456,7 +1456,7 @@
       "metadata": {
         "id": "3eMwdA8GVgbm",
         "colab_type": "code",
-        "outputId": "f12b6be2-4a6e-4146-b597-4728f1d74b8e",
+        "outputId": "8929ee97-69ff-490f-dd22-29fe0ddea214",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -1465,7 +1465,7 @@
       "source": [
         "filme_generos"
       ],
-      "execution_count": 19,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1790,7 +1790,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 60
         }
       ]
     },
@@ -1812,7 +1812,7 @@
       "metadata": {
         "id": "jQpiQvKAhl2j",
         "colab_type": "code",
-        "outputId": "78ee10ae-7033-4730-ba88-1c64b49a9c35",
+        "outputId": "fa302a1c-92f1-46fb-b4bf-fd3c04dd69c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -1821,7 +1821,7 @@
       "source": [
         "filmes_coluna"
       ],
-      "execution_count": 21,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1837,7 +1837,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 62
         }
       ]
     },
@@ -1880,7 +1880,7 @@
       "metadata": {
         "id": "P00o3I8niCOY",
         "colab_type": "code",
-        "outputId": "eb1452b4-2583-4773-f7e8-4e3e916ab9fe",
+        "outputId": "aceef76e-efce-4154-a72e-1022f31d949f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -1889,7 +1889,7 @@
       "source": [
         "filme_generos"
       ],
-      "execution_count": 23,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1921,7 +1921,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 64
         }
       ]
     },
@@ -1954,7 +1954,7 @@
       "metadata": {
         "id": "RdQEYg6cmYq2",
         "colab_type": "code",
-        "outputId": "1c4f5690-b790-4293-b6a0-81c0da1e4eb2",
+        "outputId": "fd357a2e-d90f-4f24-ed0d-ba46b90f354b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 360
@@ -1963,19 +1963,19 @@
       "source": [
         "filme_generos.plot(kind='bar')\n"
       ],
-      "execution_count": 25,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f0d851ecbe0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f0d8479b5c0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 66
         },
         {
           "output_type": "display_data",
