--- a/Desafios_QuarentenaDados_Alura.ipynb
+++ b/Desafios_QuarentenaDados_Alura.ipynb
@@ -7,12 +7,9 @@
       "provenance": [],
       "collapsed_sections": [
         "RYHj3pqwRHBj",
-        "QIzDa-G76IHd",
-        "jEjJu2OwOeSE",
-        "UiqDv1mYSIub",
-        "J6PuJmO9dPWA"
+        "ugCdu-Uu3Tw6"
       ],
-      "authorship_tag": "ABX9TyMcJoE5xbUTIfdE8Gtf8YNA",
+      "authorship_tag": "ABX9TyPZqu2CCPdu5Uio5o0UDCix",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -590,19 +587,6 @@
           "execution_count": 48
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JyBBhbMWQjRN",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "?filmes_com_medias"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
